# BazelPlayground

./: .gitignore  README.md  WORKSPACE  bazel-bazelplayground
abc/: BUILD.bazel  combine-step-with-template.bzl  combine_two_directories.bzl  copy-directory.bzl  create-whole-projects.bzl
abc/100-my-first-angular-app/: _explanation.md  _instructor.md  app.module.ts  index.html  main.ts
abc/100-my-first-angular-app/e2e/: simple.e2e-spec.ts
abc/101-data-binding/: _explanation.md  a-file.txt  index.html
abc/101-data-binding/e2e/: binding.e2e-spec.ts
abc/102-template-events/: _explanation.md  index.html
abc/102-template-events/e2e/: events.e2e-spec.ts
abc/103-multiple-components/: _explanation.md  app.component.ts  app.module.ts  index.html
abc/103-multiple-components/e2e/: multiple.e2e-spec.ts
abc/103-multiple-components/search/: search-box.component.ts
abc/104-modules/: _explanation.md  app.component.ts  app.module.ts  index.html
abc/104-modules/hr-files/: hr-files-search.component.ts  hr.module.ts
abc/104-modules/payroll/: payroll.module.ts
abc/104-modules/shared/: shared.module.ts
abc/105-routing-and-lazy-loading/: _explanation.md  app-routing.module.ts  app.component.html  index.html
abc/105-routing-and-lazy-loading/e2e/: multiple.e2e-spec.ts
abc/105-routing-and-lazy-loading/hr-files/: hr.module.ts
abc/105-routing-and-lazy-loading/payroll/: payroll-search.component.ts  payroll.module.ts
abc/105-routing-and-lazy-loading/shared/: search-box.component.ts
abc/SKIP-publish/template/: README.md  angular.json  package.json
abc/SKIP-publish/template/e2e/src/: app.e2e-spec.ts
abc/SKIP-publish/template/src/: index.html
