load(":combine-step-with-template.bzl", "combine_step_with_template")

curr_steps = [
  "100-my-first-angular-app",
  "101-data-binding",
  "102-template-events",
  "103-multiple-components",
  "104-modules",
  "105-routing-and-lazy-loading"
]


[combine_step_with_template(
  name = step + ".COMBINE",
  step_directory = step
)for step in curr_steps]

# [copy_project(
#   source = step
# )for step in curr_steps]
