load(":combine-step-with-template.bzl", "combine_step_with_template")
load(":combine_two_directories.bzl", "combine_two_directories")

curr_steps = [
  "100-my-first-angular-app",
  "101-data-binding",
  "102-template-events",
  "103-multiple-components",
  "104-modules",
  "105-routing-and-lazy-loading"
]

[combine_step_with_template(
    name = step + ".COMBINE",
    step_directory = step
  )for step in curr_steps]

# attempt to use pkg_tar for packaging the steps + angular project files together

# filegroup(
#   name = "step.GROUP",
#   srcs = ["100-my-first-angular-app"]
# )

# filegroup(
#   name = "template.GROUP",
#   srcs = ["SKIP-publish/template"]
# )

# combine_two_directories(
#   dir1 = ":step.GROUP",
#   dir2 = ":template.GROUP",
#   target = "step.OUT",
#   deps = []
# )
